DevTools Profiler: fix lines highligting alignment.
BUG=none
TEST=none

Review URL: http://codereview.chromium.org/149006

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@19350 0039d316-1c4b-4281-b951-d872f2087c98

--- a/webkit/glue/devtools/js/devtools.css
+++ b/webkit/glue/devtools/js/devtools.css
@@ -5,3 +5,7 @@
 #dock-status-bar-item {
     display: none
 }
+
+.data-grid table {
+    line-height: 120%;
+}
